# dingtalk2

./: .gitchangelog.rc  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements_dev.txt  samples.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
dingtalk/: __init__.py  __main__.py  dingtalk.py  items.py  logger.py  models.py  request.py  utils.py
dingtalk2/: __init__.py  dingtalk.py  items.py  request.py
docs/: Makefile  conf.py  history.md  index.md  index.rst  installation.rst  make.bat  quick.md  setup.md  usage.rst
docs/api/: card.md  feed.md  image.md  link.md  markdown.md  text.md
samples/: ch01.py
tests/: __init__.py  chatbot_test.py  conftest.py  test_card.py  test_dingtalk.py  test_feed.py  test_image.py  test_link.py  test_markdown.py  test_text.py
tests/fixtures/vcr/: test_action_card.yaml  test_action_card_old_api.yaml  test_feed_card.yaml  test_feed_link.yaml  test_image.yaml  test_link.yaml  test_markdown.yaml  test_text.yaml
