[tool.poetry]
name = "dingtalk"
version = "0.1.2"
description = ""
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-p no:warnings"

log_cli = 0
log_cli_level = "DEBUG"

[tool.commitizen]
version = "0.1.2"
tag_format = "v$version"

update_changelog_on_bump = true
changelog_file = "HISTORY.md"
annotated_tag = true

version_files = [
    "dingtalk/__init__.py:__version__",
    "pyproject.toml:version",
    "Makefile:VERSION := ",
    "setup.py:version=",
]

